
   * Fully consistent API (defined and correct return values)

Current Bugs to Fix

   * superposition system fails with degenerate sets (planer systems,
     etc).  sometimes it just fails period

=========================================================================
CHANGE LOG
=========================================================================

Changes up to 0.92

   * get_symmetry & set_symmetry commands for molecule objects

   * mutagenesis wizard now preserves cartoon information

   * fixed alpha channel handling for transparency OpenGL objects

   * get_pdbstr API function

   * movie_loop setting

   * changed behavior of movie controls in the internal gui so that
     the movie commands will run consistently

Changes up to 0.91

   * fixed separate cartoon rendering bugs with helices and strands

   * added a fast C-based secondary structure assignment algorithm
     acessible through the "dss" command

   * cartoon_transparency setting

   * fixed "cake bug" in ray tracter for cylinders directly aligned
     with incident light ray

   * taught sculpting engine to treat unbound waters as donor/acceptors */

   * stick_ball, and stick_ball_ratio can be used to quikly generate ball
     and stick representation without messing around with spheres...
   
   * NEW: display of valences for sticks (controlled by valence setting).
     stick_fixed_radius determines whether they are inscribed or not

   * pdb HETATMS are no longer sorted by default

   * Torsional term added to sculpting engine...not perfect, but it's 
     probably better than allowing for eclipsed conformations all over the place.

   * Optimized sculpting engine using CHUD/Shark -- now much faster.

   * Fixed CENT action with multi-state object

   * Adjusting Z scaling for mouse to provide finer control

   * Better WYSIWYG: If they are set to zero, then the settings:
       mesh_radius, line_radius, ribbon_radius,  dot_radius, dash_radius 
     are now subordinated to: